--- a/src/index.css
+++ b/src/index.css
@@ -70,14 +70,13 @@
   top: 0;
   left: 0;
   bottom: 0; 
-  
   overflow: hidden;
   z-index: -1;
-  border-radius: 20px;
+  border-radius: 16px;
 }
 #bg:hover::after{
   transition: 1s;
   transform: rotateY(3.142rad);
-  background-image: linear-gradient(220deg, #ff3d01 55%, #ff4f19 56%);
+  background-image: linear-gradient(220deg, #1176F0 55%, #5BA5FF 56%);
   /* transform: rotate3d(0, 1, 0.5, 3.142rad); */
 } 
